--- a/PdfHelper.Api/PdfHelper.Api.csproj
+++ b/PdfHelper.Api/PdfHelper.Api.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="PdfPig" Version="0.1.11" />
     <PackageReference Include="PdfSharpCore" Version="1.3.67" />
   </ItemGroup>
 
